# music-suite

./: .gitignore  README.md  lilypond.cabal  music-parts.cabal  music-pitch.cabal  music-score.cabal  music-suite.cabal  stack.yaml
src/Music/: Score.hs
src/Music/Parts/Internal/: Data.hs
src/Music/Pitch/: Literal.hs
src/Music/Pitch/Literal/: Pitch.hs
src/Music/Score/: Phrases.hs
src/Music/Score/Export/: ArticulationNotation.hs  DynamicNotation.hs  Lilypond.hs  SuperCollider.hs
src/Music/Score/Export2/: StandardNotation.hs
src/Music/Score/Internal/: Data.hs  Quantize.hs
