
name:                   music-suite
version:                1.9.2
author:                 Hans Hoglund
maintainer:             Hans Hoglund <music-suite-discuss@googlegroups.com>
license:                BSD3
license-file:           COPYING
synopsis:               A set of libraries for composition, analysis and manipulation of music.
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    This library is part of the Music Suite, see <http://music-suite.github.io>.

extra-source-files:     README.md,
                        examples/*.hs,
                        examples/*.scm

source-repository head
  type:             	git
  location:         	git://github.com/music-suite/music-suite.git

library
    build-depends:      base                    >= 4        && < 5,
                        adjunctions             >= 4.2.1 && < 5,
                        aeson                   >= 0.7.0.6 && < 2,
                        async,
                        average                 >= 0.6.1    && < 1,
                        base-orphans            >= 0.5 && < 1,
                        bifunctors              >= 5 && < 6,
                        bytestring              >= 0.10.4.0 && < 1,
                        colour                  >= 2.3.3 && < 3.0,
                        comonad                 >= 4.2.2 && < 6,
                        containers,
                        contravariant           >= 1.2 && < 2,
                        data-default,
                        distributive            >= 0.4.4 && < 5,
                        filepath                >= 1.3      && < 2,
                        HCodecs                 >= 0.5 && < 0.6,
                        hsini                   >= 0.4.1    && < 1,
                        lens                    >= 4.11     && < 5,
                        mtl                     >= 2.1.3.1 && < 3,
                        nats,
                        NumInstances,
                        optparse-applicative    >= 0.8      && < 1,
                        parsec                  >= 3.1.9 && < 4,
                        prettify,
                        process                 >= 1.2 && < 2,
                        -- profunctors             >= 4.2.0.1 && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        split                   >= 0.2.2    && < 1,
                        temporary               >= 1.1      && < 2,
                        transformers            >= 0.4.2.0 && < 0.6,
                        transformers-compat     >= 0.4.0.4,
                        vector-space            >= 0.10.2 && < 1,
                        vector-space-points     >= 0.2 && < 1,
                        monadplus,
                        musicxml2               == 1.9.2,
                        music-pitch             == 1.9.2,
                        music-parts             == 1.9.2
    if !os(windows)
      build-depends:    unix

    exposed-modules:    Control.Monad.Compose
                        Data.AffineSpace.Point.Offsets
                        Data.Functor.Context
                        Data.Functor.Couple
                        Data.Functor.Rep.Lens
                        Data.Music.Lilypond
                        Data.Music.Lilypond.Dynamics
                        Data.Music.Lilypond.IO
                        Data.Music.Lilypond.Pitch
                        Data.Music.Lilypond.Value
                        Data.PairMonad
                        Data.Semigroup.Instances
                        Music.Articulation
                        Music.Dynamics
                        Music.Dynamics.Absolute
                        Music.Dynamics.Common
                        Music.Dynamics.Balance
                        Music.Dynamics.Literal
                        Music.Prelude
                        Music.Prelude.CmdLine
                        Music.Prelude.Inspectable
                        Music.Prelude.Instances
                        Music.Prelude.Standard
                        Music.Score
                        Music.Score.Articulation
                        Music.Score.Color
                        Music.Score.Dynamics
                        Music.Score.Export2.StandardNotation
                        Music.Score.Export.Abc
                        Music.Score.Export.ArticulationNotation
                        Music.Score.Export.Backend
                        Music.Score.Export.DynamicNotation
                        Music.Score.Export.Lilypond
                        Music.Score.Export.Midi
                        Music.Score.Export.MusicXml
                        Music.Score.Export.NoteList
                        Music.Score.Export.SuperCollider
                        Music.Score.Harmonics
                        Music.Score.Import.Abc
                        Music.Score.Import.Lilypond
                        Music.Score.Import.Midi
                        Music.Score.Meta
                        Music.Score.Meta.Annotations
                        Music.Score.Meta.Attribution
                        Music.Score.Meta.Barline
                        Music.Score.Meta.Clef
                        Music.Score.Meta.Extract
                        Music.Score.Meta.Fermata
                        Music.Score.Meta.Key
                        Music.Score.Meta.RehearsalMark
                        Music.Score.Meta.Tempo
                        Music.Score.Meta.Time
                        Music.Score.Meta.Title
                        Music.Score.Part
                        Music.Score.Phrases
                        Music.Score.Pitch
                        Music.Score.Slide
                        Music.Score.Text
                        Music.Score.Ties
                        Music.Score.Tremolo
                        Music.Time
                        Music.Time.Aligned
                        Music.Time.Behavior
                        Music.Time.Duration
                        Music.Time.Event
                        Music.Time.Juxtapose
                        Music.Time.Meta
                        Music.Time.Note
                        Music.Time.Placed
                        Music.Time.Position
                        Music.Time.Reactive
                        Music.Time.Rest
                        Music.Time.Reverse
                        Music.Time.Score
                        Music.Time.Split
                        Music.Time.Track
                        Music.Time.Transform
                        Music.Time.Types
                        Music.Time.Voice
                        -- We expose these to allow GHCI development
                        Music.Time.Internal.Convert
                        Music.Time.Internal.Util
                        Music.Time.Internal.Transform
                        Music.Score.Internal.Data
                        Music.Score.Internal.Quantize
                        Music.Score.Internal.Instances
                        Music.Score.Internal.Util
                        Music.Score.Internal.Export

    other-modules:      Paths_music_suite
                        Music.Time.Internal.Preliminaries
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: ConstraintKinds,
                        DeriveDataTypeable,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveTraversable,
                        GeneralizedNewtypeDeriving,
                        MultiParamTypeClasses,
                        NoMonomorphismRestriction ,
                        RankNTypes,
                        StandaloneDeriving,
                        TupleSections,
                        TypeFamilies,
                        TypeOperators,
                        ViewPatterns,
                        OverloadedStrings

test-suite "music-suite-tests"
    build-depends:      base                    >= 4   && < 5,
                        tasty                   >= 0.8 && < 2,
                        tasty-golden            >= 2.2 && < 3,
                        process,
                        average,
                        containers,
                        tasty-quickcheck,
                        QuickCheck,
                        semigroups,
                        comonad,
                        music-parts,
                        music-pitch,
    type:               exitcode-stdio-1.0
    main-is:            Laws.hs
    hs-source-dirs:     test
    default-language:   Haskell2010


    ghc-options:        -fno-warn-typed-holes
